# baby-reading-akita-blog

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  _libsql_test_settings.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
auth_app/: urls.py  views.py
config/: settings.py  urls.py
reader/: admin.py  importer.py  models.py  tests.py  urls.py  utils.py  views.py
reader/management/commands/: enrich_posts.py  import_akita_posts.py
reader/migrations/: 0001_initial.py  0002_youtubevideo.py  0003_post_featured.py  0004_scope_reading_progress_by_user.py
static/: manifest.json
static/js/: app.js  vue3.5.49.global.js
static/js/apps/: ArchiveController.js  AuthController.js  DashboardController.js  ReaderController.js
templates/: default.html  service-worker.js
templates/admin/reader/post/: change_list.html
templates/auth_app/: login.html
templates/reader/: archive.html  dashboard.html  post_detail.html
