[project]
name = "baby-reading-akita-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-libsql>=0.1.3",
    "feedparser>=6.0.12",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]
